--- a/files/compton.conf
+++ b/files/compton.conf
@@ -33,7 +33,7 @@ glx-no-rebind-pixmap = true;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+shadow = false;
 # Avoid drawing shadows on dock/panel windows.
 no-dock-shadow = true;
 # The blur radius for shadows. (default 12)
@@ -61,13 +61,14 @@ shadow-exclude = [
 #################################
 
 menu-opacity = 1;
-inactive-opacity = 1;
-active-opacity = 1;
+inactive-opacity = 1.0;
+active-opacity = 1.0;
 inactive-opacity-override = false;
 
 # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
-# Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
+inactive-dim = 0.1;
+# Blur background of transparent windows. Bad performance with X Render backend.
+# GLX backend is preferred.
 blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
