--- a/dots.yml
+++ b/dots.yml
@@ -43,6 +43,12 @@
       # - src: profile
       #   dst: "{{ home }}/.profile"
       #   mode: "0775"
+      - src: ranger/commands.py
+        dst: "{{ xdg_config_home }}/ranger/commands.py"
+      - src: ranger/rc.conf
+        dst: "{{ xdg_config_home }}/ranger/rc.conf"
+      - src: ranger/scope.sh
+        dst: "{{ xdg_config_home }}/ranger/scope.sh"
       - src: spacemacs
         dst: "{{ home }}/.spacemacs"
       - src: spacemacs.desktop
