--- a/colorschemes.yml
+++ b/colorschemes.yml
@@ -73,7 +73,6 @@ colorscheme_arc:             # ansi code, ansi name, program
   urgent:     "#E28952" # red
 
   background-alt: "#F5F6F7" # gray
-  # From https://github.com/altercation/solarized/blob/master/xresources/solarized
   background: "#F5F6F7"
   foreground: "#5C616C"
 
@@ -101,6 +100,34 @@ colorscheme_zenburn:
   urgent:     "#BC8383" # 
 
   background-alt: "#3F3F3F" # gray
-  # From https://github.com/altercation/solarized/blob/master/xresources/solarized
   background: "#3F3F3F"
   foreground: "#DCDCCC"
+
+colorscheme_tao_yang:
+  # Default tao-theme-scale-fn is tao-theme-golden-scale, and produce following colors:
+  # #FCFCFC #FAFAFA #F6F6F6 #F1F1F1 #E8E8E8 #DADADA #C3C3C3 #9E9E9E #616161 #3C3C3C #252525 #171717 #0E0E0E #090909 #050505
+
+  no color:       "#090909" # 0,  no color,     text in terminal
+  red:            "#0E0E0E" # 1,  red,          booleans in vim
+  green:          "#171717" # 2,  green,        ???
+  yellow:         "#252525" # 3,  yellow,       ???
+  blue:           "#3C3C3C" # 4,  blue,         selected line in rofi
+  magenta:        "#616161" # 5,  magenta,      ???
+  cyan:           "#171717" # 6,  cyan,         ???
+  gray:           "#252525" # 7,  gray,         background in terminal
+  light black:    "#090909" # copied from above
+  light red:      "#0E0E0E"
+  light green:    "#171717"
+  light yellow:   "#252525"
+  light blue:     "#3C3C3C"
+  light magenta:  "#616161"
+  light cyan:     "#171717"
+  light gray:     "#252525"
+
+  text:       "#090909" # no color
+  selected:   "#3C3C3C" # blue, taken from Arc
+  urgent:     "#E28952" # red, taken from arc
+
+  background-alt: "#F6F6F6" # gray
+  background: "#F1F1F1"
+  foreground: "#090909"
