--- a/dots.yml
+++ b/dots.yml
@@ -75,10 +75,10 @@
         dst: "{{ home }}/.xmodmap"
 
       # Themed items
-      - src: "{{ colorscheme['wallpaper'] | default(False) }}"
-        dst: "{{ xdg_config_home }}/wallpaper.png"
-      - src: "{{ colorscheme['conkyrc'] | default(False) }}"
-        dst: "{{ xdg_config_home }}/conky/conkyrc"
+      # - src: "{{ colorscheme['wallpaper'] | default(False) }}"
+      #   dst: "{{ xdg_config_home }}/wallpaper.png"
+      # - src: "{{ colorscheme['conkyrc'] | default(False) }}"
+      #   dst: "{{ xdg_config_home }}/conky/conkyrc"
 
   tasks:
     - name: configure nixos
@@ -92,7 +92,7 @@
         owner: "{{ username }}"
         group: "{{ username }}"
         mode: "0660"
-      when: "{{ (become | bool) and (not ci) }}"
+      when: "(become | bool) and (not ci)"
 
     - name: make user symlink dirs
       file:
@@ -113,7 +113,7 @@
         owner: "{{ item.owner | default(username) }}"
         group: "{{ item.group | default(username) }}"
         mode: "{{ item.mode | default('0664') }}"
-      when: "{{ item.src != False }}"
+      when: "item.src != False"
       with_items: "{{ symlinks }}"
 
     - name: render user templates
@@ -129,28 +129,7 @@
 
     - name: handle xrdb changes
       command: xrdb -merge $HOME/.Xresources
-      when: "{{ not ci }}"
+      when: "not ci"
 
-    - name: create new nix snowflake wallpaper (step 0 - delete old wallpaper)
-      file:
-        follow: true
-        state: absent
-        path: "{{ xdg_config_home }}/wallpaper.png"
-      when: "{{ colorscheme['nix_snowflake_wallpaper'] | default(False) }}"
-
-    - name: create new nix snowflake wallpaper (step 1 - foreground)
-      command: >-
-        convert {{ playbook_dir }}/files/nix-snowflake-wallpaper.png
-        -fill {{ colorscheme["foreground"] }} -opaque white
-        {{ xdg_config_home }}/wallpaper.png
-      when: "{{ colorscheme['nix_snowflake_wallpaper'] | default(False) }}"
-
-    - name: create new nix snowflake wallpaper (step 2 - background)
-      command: >-
-        convert {{ xdg_config_home }}/wallpaper.png
-        -fill {{ colorscheme["background"] }} -opaque black
-        {{ xdg_config_home }}/wallpaper.png
-      when: "{{ colorscheme['nix_snowflake_wallpaper'] | default(False) }}"
-
-    - name: set new background
-      command: "feh --bg-scale {{ xdg_config_home }}/wallpaper.png"
+    # - name: set new background
+    #   command: "feh --bg-scale {{ xdg_config_home }}/wallpaper.png"
