--- a/dots.yml
+++ b/dots.yml
@@ -24,6 +24,8 @@
         #dst: "{{ xdg_config_home }}/gtk-3.0/settings.ini"
       - src: compton.conf
         dst: "{{ xdg_config_home }}/compton.conf"
+      - src: config.nix
+        dst: "{{ xdg_config_home }}/nixpkgs/config.nix"
       - src: gitconfig
         dst: "{{ home }}/.gitconfig"
       - src: gitignore
