--- a/dots.yml
+++ b/dots.yml
@@ -8,7 +8,7 @@
 
   vars:
     become: false
-    colorscheme: "{{ colorscheme_tao_yang}}"
+    colorscheme: "{{ colorscheme_tao_yang }}"
     ci: "{{ lookup('env', 'CI') | bool }}" # are we running in Travis?
     username: "{% if ci %}travis{% else %}siddharthist{% endif %}"
     home: "{% if ci  %}{{ playbook_dir }}{% else %}{{ lookup('env', 'HOME') }}{% endif %}"
@@ -71,8 +71,8 @@
         mode: "0750"
       - src: rofi.rasi
         dst: "{{ xdg_config_home }}/rofi/config.rasi"
-      - src: spacemacs
-        dst: "{{ home }}/.spacemacs"
+      # - src: spacemacs
+      #   dst: "{{ home }}/.spacemacs"
       - src: spacemacs.desktop
         dst: "{{ home }}/.local/share/applications/spacemacs.desktop"
       - src: ssh
@@ -85,6 +85,8 @@
         dst: "{{ home }}/.urlview"
       - src: xmodmap
         dst: "{{ home }}/.xmodmap"
+      # - src: Xresources
+      #   dst: "{{ home }}/.Xresources"
       - src: zsh.d
         dst: "{{ home }}/.zsh.d"
         mode: "0750"
