--- a/dots.yml
+++ b/dots.yml
@@ -32,6 +32,8 @@
         dst: "{{ xdg_config_home }}/gitignore"
       - src: i3
         dst: "{{ xdg_config_home }}/i3/config"
+      - src: i3status.conf
+        dst: "{{ xdg_config_home }}/i3status/config"
       - src: library.blb
         dst: "{{ xdg_config_home }}/beets/library.blb"
       - src: latexmkrc
