--- a/dots.yml
+++ b/dots.yml
@@ -85,6 +85,8 @@
         dst: "{{ xdg_config_home }}/sway/config"
       - src: sxhkdrc
         dst: "{{ xdg_config_home }}/sxhkd/sxhkdrc"
+      - src: tmux.conf
+        dst: "{{ home }}/.tmux.conf"
       - src: "unsplash/{{ wallpaper }}"
         dst: "{{ xdg_config_home }}/wallpaper.jpg"
       - src: urlview
