tmux: plugins, C-space prefix

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,4 +1,21 @@
-setw     -g mode-keys   vi
-set      -g status-keys vi
-bind-key -t vi-edit     Up   history-up
-bind-key -t vi-edit     Down history-down
+# setw     -g mode-keys   vi
+# set      -g status-keys vi
+# bind-key -t vi-edit     Up   history-up
+# bind-key -t vi-edit     Down history-down
+
+# Set prefix to Ctrl-Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+# Spacemacs window splits
+bind / split-window -h
+bind - split-window -v
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
