ranger + trash-put

--- a/files/ranger/rc.conf
+++ b/files/ranger/rc.conf
@@ -375,9 +375,11 @@ map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
-map dD console delete
+# map dd console delete
+map dd shell -s trash-put %s
+map <DELETE> shell -s trash-put %s
 
-map dd cut
+map dD cut
 map ud uncut
 map da cut mode=add
 map dr cut mode=remove
