--- a/dots.yml
+++ b/dots.yml
@@ -65,6 +65,8 @@
       - src: mutt
         dst: "{{ home }}/.mutt"
         mode: "0750"
+      - src: my-cheatsheet.el
+        dst: "{{ home }}/.emacs.d/private/local/my-cheatsheet.el"
       - src: offlineimaprc
         dst: "{{ home }}/.offlineimaprc"
       # Currently breaks GNOME on Fedora
