--- a/files/matterhorn.ini
+++ b/files/matterhorn.ini
@@ -13,7 +13,7 @@ host: mattermost.galois.com
 # absent or isn't one of your teams, you'll be prompted for a choice of
 # your teams.
 #
-team: galwegians
+# team: galwegians
 
 # Password command. Optional. If this and the password option are both
 # missing or give the wrong password, you'll be prompted on startup.
