--- a/dots.yml
+++ b/dots.yml
@@ -49,6 +49,8 @@
         dst: "{{ xdg_config_home }}/i3/config"
       - src: i3status.conf
         dst: "{{ xdg_config_home }}/i3status/config"
+      - src: keynavrc
+        dst: "{{ xdg_config_home }}/keynav/keynavrc"
       - src: library.blb
         dst: "{{ xdg_config_home }}/beets/library.blb"
       - src: latexmkrc
