--- a/dots.yml
+++ b/dots.yml
@@ -91,6 +91,9 @@
         mode: "0750"
       - src: rofi.rasi
         dst: "{{ xdg_config_home }}/rofi/config.rasi"
+      - src: sh-mode-snippets
+        dst: "{{ home }}/.emacs.d/private/snippets/sh-mode"
+        mode: "0750"
       - src: spacemacs
         dst: "{{ home }}/.spacemacs"
       - src: spacemacs.desktop
