--- a/dots.yml
+++ b/dots.yml
@@ -151,13 +151,6 @@
         clone: yes
         update: no
 
-    - name: clone zaw
-      git:
-        repo: 'https://github.com/zsh-users/zaw'
-        dest: "{{ home }}/.zsh.d/zaw"
-        clone: yes
-        update: no
-
     - name: make user symlink dirs
       file:
         follow: true
@@ -190,6 +183,20 @@
       with_items:
         - src: Xresources
           dst: "{{ home }}/.Xresources"
+
+    - name: clone zaw
+      git:
+        repo: 'https://github.com/zsh-users/zaw'
+        dest: "{{ home }}/.zsh.d/zaw"
+        clone: yes
+        update: no
+
+    - name: clone spacemacs
+      git:
+        repo: 'https://github.com/syl20bnr/spacemacs'
+        dest: "{{ home }}/.emacs.d"
+        clone: yes
+        update: no
 
     - name: handle xrdb changes
       command: xrdb -merge $HOME/.Xresources
