--- a/dots.yml
+++ b/dots.yml
@@ -202,5 +202,16 @@
       command: xrdb -merge $HOME/.Xresources
       when: "not ci"
 
+    # rather than diffing the config file, just run some commands...
+    - name: configure qutebrowser
+      command: qutebrowser "{{ setting }}""
+      when: "not ci"
+      with_items:
+        - setting: ':set fonts.monospace Hack'
+        - setting: ':set fonts.downloads "6pt monospace"'
+        - setting: ':set fonts.completion.entry "6pt monospace"'
+        - setting: ':set fonts.tabs "8pt monospace"'
+        - setting: ':set fonts.statusbar "8pt monospace"'
+
     # - name: set new background
     #   command: "feh --bg-scale {{ xdg_config_home }}/wallpaper.png"
