--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -3,10 +3,10 @@
 # bind-key -t vi-edit     Up   history-up
 # bind-key -t vi-edit     Down history-down
 
-# Set prefix to Ctrl-Space
+# Set prefix to Ctrl-a
 unbind C-b
-set -g prefix C-Space
-bind Space send-prefix
+set -g prefix C-a
+bind a send-prefix
 
 # Spacemacs window splits
 bind / split-window -h
