server: don't build docker images with nix

--- a/server/Makefile
+++ b/server/Makefile
@@ -9,24 +9,15 @@ RSYNC := rsync \
 	     --exclude=log \
 		 --include='.*'
 
-result/%.tar.gz: %.nix
-	nix-build $<
-
-%.image: result/%.tar.gz
-	sudo docker load < result
-	touch $@
-
 .PHONY: to
 to:
 	$(RSYNC) \
-	  --delete \
-	  --delete-excluded \
 	  . \
 	  $(REMOTE)
 
 .PHONY: from
 from:
-	$(RSYNC) $(REMOTE) .
+	$(RSYNC) --exclude=code $(REMOTE) .
 
 .PHONY: run
 run: syncthing.image
