--- a/files/i3status.conf
+++ b/files/i3status.conf
@@ -14,7 +14,7 @@ order += "tztime local"
 # order += "cpu_temperature 0"
 
 wireless wlp2s0 {
-  format_up = "📶: (%essid) (%quality)"
+  format_up = "📶: %essid (%quality)"
   format_down = "📶: down"
 
   min_width = 100
